0.7.2
Set tool bar items enabled properly after 'Revert'.
Fixed removing all bookmarks.
Fixed removing bookmark mistakenly marking document dirty.
Fixed moving selection up/down via shortcut.
Fixed moving line up/down via shortcut.
Fixed progress dialog not showing full.
Made progress dialog show % of files when restoring session.
Redone syntax highlighting plugins.
Redone theme files.
Added theme class.

0.7.1
Set tab background colour to document state.
Added QT_tabColoursClass.cpp/.h
Fixed warning on file changed on disk, tab goes yellow and doc marked dirty if 'ignore' selected, tab goes pinkish if no warnings selected and file changes.
Fixed find/find next menus.
Fixed changed find options being saved with prefs.
Added find after replace option to find dialog.
Find backwards in all files working properly.
Find/Replace handles multi line find replace properly.
Redone find/replace, now replaces '\n' and '\t' in the search dialog correctly.
Revert file no longer deletes undo history.
Done warn on file change pref.
Done refresh document when file changes on disk.
Add sytnatx highlighting for binary numbers in 'c/c++'.
Added functions for multiple different multiline highlighting.
More syntax highlighting fixes.
Fixed '//' inside quotes wrongly being highlighted as comment ( c,c++ etc ).
Added runCustomRule to language plugins.
Done documentaion interaction ( hold 'CTRL' while clicking ( some! )links in built documentation ).
Fixed holding 'SHIFT' when selecting tab from edit menu to move tab next to current tab.
Fixed setting KKEDIT_FILE_LIST env var for tool.
Excluded moc_* files from doxygen.
Fixed opening root editor.
Fixed opening manpageeditor.
Removed 'system' calls.
Redone plugin build system.
Redone plugin .pro files.
Added simple help to SaveHistory plug.

0.7.0
Fixed highlight all when no documents are open.
Fixed asking to save files when selecting Save All from menu.
Code clean.
Added SaveHistory plugin.
Language plugin tweaks.