@@ -984,12 +984,14 @@ void KKEditClass::buildTools(void)
 
 //info
 	QString info="PLACEHOLDERS:\n\
-%t - Currently selected text. Passed to command as $KKEDIT_SELECTION\n\
+%l - List of open files. Passed to command as $KKEDIT_FILE_LIST, files are space separated\n\
+%n - Number of open files. PASSED to command as $KKEDIT_FILECOUNT\n\
 %f - Filepath of the current document. Passed to command as $KKEDIT_CURRENTFILE\n\
 %d - Directory of the current document or $HOME. Passed to command as $KKEDIT_CURRENTDIR\n\
+%t - Currently selected text. Passed to command as $KKEDIT_SELECTION\n\
+%m - Mime type of file. Passed to command as $KKEDIT_MIMETYPE\n\
 %i - The location of the globally installed tools. Passed to command as $KKEDIT_DATADIR\n\
-%h - Tempory file for displaying html in doc viewer. Passed to command as $KKEDIT_HTMLFILE\n\
-%m - Mime tyoe of file. Passed to command as $KKEDIT_MIMETYPE";
+%h - Tempory file for displaying html in doc viewer. Passed to command as $KKEDIT_HTMLFILE\n";
 
 	widgetlabel=new QLabel(info);
 	grid->addWidget(widgetlabel,posy,posx,posy++,-1,Qt::AlignVCenter);
